Finish removing classroom authorization

--- a/.ftpconfig
+++ b/.ftpconfig
@@ -5,7 +5,7 @@
     "user": "evan",
     "pass": "",
     "promptForPass": false,
-    "remote": "/var/www/evansharp.ca/closed-stockgame",
+    "remote": "/var/www/evansharp.ca/stockgame",
     "local": "~/Documents/github/closed-stockgame",
     "agent": "",
     "privatekey": "~/.ssh/chromebook.pem",
